Java Script Organization

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Clickopolis</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <script src="resources.js" defer></script>
+    <script src="buildings.js" defer></script>
+    <script src="population.js" defer></script>
+    <script src="game.js" defer></script>
+
 </head>
 <body>
     <header>
